--- a/upload/admin/view/template/extension/payment/paynl3.twig
+++ b/upload/admin/view/template/extension/payment/paynl3.twig
@@ -66,6 +66,17 @@
                             {% endif %}
                         </div>
                     </div>
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label"
+                               for="{{ payment_method_name }}_gateway">
+                            <span data-toggle="tooltip" title="{{ text_gateway_tooltip }}">
+                                {{ text_gateway }}
+                            </span></label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" name="{{ payment_method_name }}_gateway"
+                                   value="{{ gateway }}"/>
+                        </div>
+                    </div>
 
                     <div class="form-group">
                         <label class="col-sm-2 control-label"
