--- a/upload/admin/view/template/extension/payment/paynl3.twig
+++ b/upload/admin/view/template/extension/payment/paynl3.twig
@@ -46,6 +46,11 @@
                             </select>
                         </div>
                     </div>
+                    <div class="form-group">
+                        <div class="panel-heading" style="border-top: 1px solid #dcdcdc;  margin-top: 15px;">
+                            <h3 class="panel-title"><i class="fa fa-pencil"></i> PAY. General settings</h3>             
+                        </div>
+                    </div>
                     <div class="form-group required">
                         <label class="col-sm-2 control-label" for="{{ payment_method_name }}_apitoken">Apitoken</label>
                         <div class="col-sm-10">
@@ -97,7 +102,6 @@
                                    value="{{ gateway }}"/>
                         </div>
                     </div>
-
                     <div class="form-group">
                         <label class="col-sm-2 control-label"
                                for="{{ payment_method_name }}_display_icon">
@@ -128,6 +132,11 @@
                             </select>
                         </div>
                     </div>
+                    <div class="form-group">
+                        <div class="panel-heading" style="border-top: 1px solid #dcdcdc;  margin-top: 15px;">
+                            <h3 class="panel-title"><i class="fa fa-euro"></i> Payment method settings</h3>             
+                        </div>
+                    </div>                    
                     <div class="form-group">
                         <label class="col-sm-2 control-label"
                                for="{{ payment_method_name }}_label">Label</label>
