--- a/upload/admin/view/template/extension/payment/paynl3.twig
+++ b/upload/admin/view/template/extension/payment/paynl3.twig
@@ -48,7 +48,7 @@
                     </div>
                     <div class="form-group">
                         <div class="panel-heading" style="border-top: 1px solid #dcdcdc;  margin-top: 15px;">
-                            <h3 class="panel-title"><i class="fa fa-pencil"></i> PAY. General settings</h3>             
+                            <h3 class="panel-title"><i class="fa fa-pencil"></i> {{ text_general_settings }}</h3>             
                         </div>
                     </div>
                     <div class="form-group required">
@@ -134,7 +134,7 @@
                     </div>
                     <div class="form-group">
                         <div class="panel-heading" style="border-top: 1px solid #dcdcdc;  margin-top: 15px;">
-                            <h3 class="panel-title"><i class="fa fa-euro"></i> Payment method settings</h3>             
+                            <h3 class="panel-title"><i class="fa fa-euro"></i> {{ text_method_settings }}</h3>             
                         </div>
                     </div>                    
                     <div class="form-group">
