--- a/upload/admin/view/template/extension/payment/paynl3.twig
+++ b/upload/admin/view/template/extension/payment/paynl3.twig
@@ -31,7 +31,7 @@
                 <form action="{{ action }}" method="post" class="form-horizontal"
                       enctype="multipart/form-data" id="form-pay">                    
                     <div class="form-group">
-                        <div class="panel-heading" style="border-top: 1px solid #dcdcdc;  margin-top: 15px;">
+                        <div class="panel-heading" style="border-top: 1px solid #dcdcdc;">
                             <h3 class="panel-title"><i class="fa fa-pencil"></i> {{ text_general_settings }}</h3>             
                         </div>
                     </div>
