--- a/upload/admin/view/template/extension/payment/paynl3.twig
+++ b/upload/admin/view/template/extension/payment/paynl3.twig
@@ -141,6 +141,20 @@
                     </div>
                     <div class="form-group">
                         <label class="col-sm-2 control-label"
+                               for="{{ payment_method_name }}_customer_type">
+                            <span data-toggle="tooltip" title="{{ text_customer_type_tooltip }}">
+                                {{ text_customer_type }}
+                            </span></label>
+                        <div class="col-sm-10">
+                            <select class="form-control" name="{{ payment_method_name }}_customer_type">
+                                <option value="both" {{ customer_type == 'both' ? 'selected="selected"': '' }}>{{ text_both }}</option>
+                                <option value="private" {{ customer_type == 'private' ? 'selected="selected"': '' }}>{{ text_private }}</option>
+                                <option value="business" {{ customer_type == 'business' ? 'selected="selected"': '' }}>{{ text_business }}</option>                                
+                            </select>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label"
                                for="{{ payment_method_name }}_confirm_on_start">
                             <span data-toggle="tooltip" title="{{ text_confirm_start_tooltip }}">
                                 {{ text_confirm_start }}
