--- a/upload/catalog/view/theme/default/template/payment/paynl3.twig
+++ b/upload/catalog/view/theme/default/template/payment/paynl3.twig
@@ -14,6 +14,37 @@
         </select>
     </div>
 {% endif %}
+
+<div class="alert alert-danger hidden" id="pay_error"></div>
+
+{% if coc %}
+    <script type="text/javascript">var coc = {{ coc }};</script>
+    <div class="form-group">
+        <label for="coc">{{ text_coc }}</label>
+        <div class='input-group date' id='cocnumber'>
+            <input type='text' class="form-control" id="coc"/>
+            <span class="input-group-addon">
+                <span class="glyphicon glyphicon-asterisk"></span>
+            </span>
+        </div>
+    </div>    
+{% else %}
+    <script type="text/javascript">var coc = null;</script>
+{% endif %}
+{% if vat %}
+    <script type="text/javascript">var vat = {{ vat }};</script>
+    <div class="form-group">
+        <label for="vat">{{ text_vat }}</label>
+        <div class='input-group date' id='vatid'>
+            <input type='text' class="form-control" id="vat"/>
+            <span class="input-group-addon">
+                <span class="glyphicon glyphicon-asterisk"></span>
+            </span>
+        </div>
+    </div>    
+{% else %}
+    <script type="text/javascript">var vat = null;</script>
+{% endif %}
 <div class="buttons">
     <div class="pull-right">
         <input onclick="startTransaction();" value="{{ button_confirm }}" type="button"
@@ -26,6 +57,44 @@
         var data = {};
         if (jQuery('#optionsub') != undefined) {
             data.optionSubId = jQuery('#optionsub').val();
+        }
+        switch (coc) {
+            case 1:
+                if (jQuery('#coc') != undefined) {
+                    data.coc = jQuery('#coc').val();
+                }
+                break;
+            case 2:
+                if (jQuery('#coc').val() === '') {
+                    jQuery('#button-confirm').disabled = true;
+                    jQuery('#pay_error').text('{{ error_coc }}');
+                    jQuery('#pay_error').removeClass("hidden");
+                    return;
+                } else {
+                    data.coc = jQuery('#coc').val();
+                }
+                break;
+            default:
+                data.coc = null;
+        }
+        switch (vat) {
+            case 1:
+                if (jQuery('#vat') != undefined) {
+                    data.vat = jQuery('#vat').val();
+                }
+                break;
+            case 2:
+                if (jQuery('#vat').val() === '') {
+                    jQuery('#button-confirm').disabled = true;
+                    jQuery('#pay_error').text('{{ error_vat }}');
+                    jQuery('#pay_error').removeClass("hidden");
+                    return;
+                } else {
+                    data.vat = jQuery('#vat').val();
+                }
+                break;
+            default:
+                data.vat = null;
         }
         jQuery.ajax({
             url: 'index.php?route=extension/payment/{{ paymentMethodName }}/startTransaction',
