--- a/upload/admin/view/template/extension/payment/paynl3.twig
+++ b/upload/admin/view/template/extension/payment/paynl3.twig
@@ -136,6 +136,17 @@
                         </div>
                     </div>
                     <div class="form-group">
+                        <label class="col-sm-2 control-label"
+                               for="payment_paynl_general_custom_exchange_url">
+                            <span data-toggle="tooltip" title="{{ text_custom_exchange_url_tooltip }}">
+                                {{ text_custom_exchange_url }}
+                            </span></label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" name="payment_paynl_general_custom_exchange_url"
+                                   value="{{ custom_exchange_url }}"/>
+                        </div>
+                    </div>
+                    <div class="form-group">
                         <div class="panel-heading" style="border-top: 1px solid #dcdcdc;  margin-top: 15px;">
                             <h3 class="panel-title"><i class="fa fa-euro"></i> {{ text_method_settings }}</h3>
                         </div>
