--- a/upload/admin/view/template/extension/payment/paynl3.twig
+++ b/upload/admin/view/template/extension/payment/paynl3.twig
@@ -46,7 +46,7 @@
                     <div class="form-group required">
                         <label class="col-sm-2 control-label" for="payment_paynl_general_apitoken">Apitoken</label>
                         <div class="col-sm-10">
-                            <input type="text" class="form-control" name="payment_paynl_general_apitoken"
+                            <input type="password" class="form-control" name="payment_paynl_general_apitoken"
                                    value="{{ apitoken }}"/>
                             {% if error_apitoken %}
                                 <div class="text-danger">{{ error_apitoken }}</div>
