--- a/upload/admin/view/template/extension/payment/paynl3.twig
+++ b/upload/admin/view/template/extension/payment/paynl3.twig
@@ -147,6 +147,20 @@
                         </div>
                     </div>
                     <div class="form-group">
+                        <div class="col-sm-10 col-sm-offset-2">
+                            {{ text_current_ip }}{{ current_IP }}
+                        </div>
+                        <label class="col-sm-2 control-label"
+                               for="payment_paynl_general_test_ip">
+                            <span data-toggle="tooltip" title="{{ text_test_ip_tooltip }}">
+                                {{ text_test_ip }}
+                            </span></label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" name="payment_paynl_general_test_ip"
+                                   value="{{ test_ip }}"/>
+                        </div>
+                    </div>
+                    <div class="form-group">
                         <div class="panel-heading" style="border-top: 1px solid #dcdcdc;  margin-top: 15px;">
                             <h3 class="panel-title"><i class="fa fa-euro"></i> {{ text_method_settings }}</h3>
                         </div>
