--- a/upload/admin/view/template/extension/payment/paynl3.twig
+++ b/upload/admin/view/template/extension/payment/paynl3.twig
@@ -38,9 +38,24 @@
             <div class="panel-body">
                 <form action="{{ action }}" method="post" class="form-horizontal"
                       enctype="multipart/form-data" id="form-pay">
+                    <input id="ajax_url" type="hidden" class="form-control" name="ajax_url" value="{{ action }}"/>
                     <div class="form-group">
                         <div class="panel-heading" style="border-top: 1px solid #dcdcdc;">
                             <h3 class="panel-title"><i class="fa fa-pencil"></i> {{ text_general_settings }}</h3>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label" for="payment_paynl_version">Version</label>
+                        <div class="col-sm-10">
+                            <input id="pay_current_version" type="hidden" class="form-control" name="pay_current_version" value="{{ version }}"/>
+                            <div class="version">
+                                {{ version }}
+                                <button title="Submit" id="check_version_submit" style="display: inline-block; margin-left: 15px" class="btn btn-primary">Check Version</button>
+                                <span id="paynl_version_check" style="display: inline-block; margin-left: 12px;">
+                                    <span id="paynl_version_check_loading" style="display: none;">Loading...</span>
+                                    <span id="paynl_version_check_result" style="display: none;"></span>
+                                </span>
+                            </div>
                         </div>
                     </div>
                     <div class="form-group required">
@@ -366,4 +381,53 @@
         </div>
     </div>
 </div>
+<script>
+jQuery(document).ready(function () {   
+    jQuery("#check_version_submit").click(function (e) {
+        e.preventDefault();
+        var ajaxurl = jQuery('#ajax_url').val();
+        var data = {
+            'versionCheck' : jQuery('#pay_current_version').val()
+        };
+
+        jQuery('#paynl_version_check_result').hide();
+        jQuery('#paynl_version_check_loading').css('display', 'block');
+
+        setTimeout(function () {    
+            jQuery.ajax({
+                url: ajaxurl,
+                type: 'POST',
+                data: data,
+                dataType: 'json',
+                success: function (data) {                    
+                    let result = '';                        
+                    if (!data) {
+                        result = 'Something went wrong, please try again later'
+                    } else {
+                        var newest_version = data.version.substring(1);
+                        var current_version = jQuery('#pay_current_version').val();
+
+                        if (newest_version > current_version) {
+                            result = 'There is a new version available (' + data.version + ')'
+                        } else {
+                            jQuery('#paynl_version_check_button').hide();
+                            result = 'You are up to date with the latest version'
+                            jQuery('#paynl_version_check_current_version').addClass('versionUpToDate');
+                        }
+                    }
+                    jQuery('#paynl_version_check_result').html(result);
+                    jQuery('#paynl_version_check_result').css('display', 'block');
+                    jQuery('#paynl_version_check_loading').hide();
+                },
+                error: function () {
+                    result = 'Something went wrong, please try again later'
+                    jQuery('#paynl_version_check_result').html(result);
+                    jQuery('#paynl_version_check_result').css('display', 'block');
+                    jQuery('#paynl_version_check_loading').hide();
+                }
+            });
+        }, 750);       
+    });        
+});
+</script>
 {{ footer }}
