--- a/upload/admin/view/template/extension/payment/paynl3.twig
+++ b/upload/admin/view/template/extension/payment/paynl3.twig
@@ -383,6 +383,7 @@
                         <div id="email_error" class="text-danger col-sm-10" style="display: none">{{ text_email_error }}</div>
                         <div class="col-sm-10">
                             <input id="suggestions_form_url" type="hidden" class="form-control" name="suggestions_form_url" value="{{ action }}"/>
+                            <input id="suggestions_form_plugin_version" type="hidden" class="form-control" name="suggestions_plugin_version" value="{{ version }}"/>
                             <input id="suggestions_form_email" type="text" class="form-control" name="suggestions_form_email"/>
                         </div>
                     </div>
@@ -394,7 +395,7 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <button form="suggestions_form" title="Submit" id="suggestions_form_submit" style="float: right; margin-right: 15px;" class="btn btn-primary">{{ text_suggestions_submit }}</button>
+                        <button form="suggestions_form" title="Submit" id="suggestions_form_submit" class="btn btn-primary">{{ text_suggestions_submit }}</button>
                     </div>
                 </form>
             </div>
@@ -432,54 +433,4 @@
         </div>
     </div>
 </div>
-
-<script>
-jQuery(document).ready(function () {
-    jQuery("#suggestions_form_submit").click(function () {
-        $('#email_error').hide();
-        $('#message_error').hide();
-        var email = $('#suggestions_form_email').val();
-        var message = $('#suggestions_form_message').val();
-
-        var regex = /^[\w-\.]+@([\w-]+\.)+[\w-]/i;
-        if($.trim(message) == '' || ($.trim(email) != '' && !regex.test($('#suggestions_form_email').val()))){
-            if($.trim(email) != '' && !regex.test($('#suggestions_form_email').val())){
-                $('#email_error').css('display', 'inline');
-            }
-            if($.trim(message) == ''){
-                $('#message_error').css('display', 'inline');
-            }
-            return false;
-        }
-
-        var ajaxurl = $('#suggestions_form_url').val();
-        var data = {
-            'email' : email,
-            'message' : message
-        };
-        setTimeout(function () {
-            $.ajax({
-                url: ajaxurl,
-                type: 'POST',
-                data: data,
-                dataType: 'json',
-                success: function (data) {
-                    if (data.success) {
-                        $('#suggestions_form_email').val("");
-                        $('#suggestions_form_message').val("");
-                        $('#suggestions_form_success').modal('show');
-                    } else {
-                        $('#suggestions_form_fail').modal('show');
-                    }
-                },
-                error: function () {
-                    $('#suggestions_form_fail').modal('show');
-                }
-            });
-        }, 750);
-
-    });
-});
-</script>
-
 {{ footer }}
