--- a/upload/admin/view/template/extension/payment/paynl3.twig
+++ b/upload/admin/view/template/extension/payment/paynl3.twig
@@ -150,14 +150,22 @@
                         </label>
                         <div class="col-sm-10">
                             <select name="payment_paynl_general_logging" id="payment_paynl_general_logging" class="form-control">
-                                {% if logging %}
+                                {% if logging == 0 %}
+                                    <option value="1">{{ text_enabled }}</option>
+                                    <option value="0" selected="selected">{{ text_disabled }}</option>                                    
+                                {% else %}
                                     <option value="1" selected="selected">{{ text_enabled }}</option>
                                     <option value="0">{{ text_disabled }}</option>
-                                {% else %}
-                                    <option value="1">{{ text_enabled }}</option>
-                                    <option value="0" selected="selected">{{ text_disabled }}</option>
                                 {% endif %}
                             </select>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label" for="payment_paynl_logs">Download logs</label>
+                        <div class="col-sm-10">
+                            <div class="version">                                
+                                <a id="download_logs" class="btn btn-primary" href="{{ action }}&downloadlogs=1" target="_BLANK">Download</a>
+                            </div>
                         </div>
                     </div>
                     <div class="form-group">
